# Agent-harness-bench

./: README.md
project 1/: CLAUDE.md  pyproject.toml
project 1/graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
project 1/output/: evaluation_result.json  report.html  trajectory.graph.json
project 1/src/agent_harness_bench/: schema.py
project 1/src/agent_harness_bench.egg-info/: PKG-INFO
project 1/src/agent_harness_bench/evaluate/: compliance.py  evaluation.py  generation.py
project 1/src/agent_harness_bench/ingest/: __init__.py  auto.py
project 1/src/agent_harness_bench/report/: html_report.py  summary.py
src/agent_harness_bench/: __init__.py  cli.py  pipeline.py
src/agent_harness_bench.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/agent_harness_bench/evaluate/: __init__.py  execution.py
src/agent_harness_bench/ingest/: jsonl.py  langsmith.py  opentelemetry.py
src/agent_harness_bench/report/: __init__.py  leaderboard.py  trajectory_graph.py
